# AgentLabX

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
agentlabx/: __init__.py
agentlabx/agents/: base.py  config_agent.py  config_loader.py  context.py  pi_agent.py
agentlabx/agents/configs/: ml_engineer.yaml  phd_student.yaml  pi_agent.yaml  postdoc.yaml  professor.yaml  reviewers.yaml  sw_engineer.yaml
agentlabx/auth/: __init__.py  default.py  oauth.py  protocol.py  token.py
agentlabx/cli/: main.py
agentlabx/config/: settings.py
agentlabx/core/: __init__.py  config.py  event_types.py  events.py  graph_mapper.py  json_types.py  pipeline.py  registry.py  session.py  state.py  turn_context.py  zones.py
agentlabx/data/: providers.yaml
agentlabx/db/: __init__.py  migrations.py  schema.py  session.py
agentlabx/events/: __init__.py  bus.py  logger.py
agentlabx/llm/: __init__.py  budget.py  catalog.py  key_resolver.py  litellm_provider.py  protocol.py  traced_provider.py
agentlabx/mcp/: __init__.py  api_models.py  capabilities.py  dispatcher.py  host.py  protocol.py  redaction.py  registry.py  transport.py
agentlabx/mcp/bundles/: __init__.py  arxiv.py  browser.py  code_execution.py  code_execution_server.py  filesystem.py  memory_server.py  semantic_scholar.py
agentlabx/models/: __init__.py  api.py
agentlabx/plugins/: __init__.py  _builtin.py  registry.py
agentlabx/security/: __init__.py  fernet_store.py  keyring_store.py  passwords.py  slot_resolver.py
agentlabx/server/: __init__.py  app.py  dependencies.py  deps.py  events.py  executor.py  middleware.py  rate_limit.py  static.py
agentlabx/stages/: _helpers.py  base.py  data_exploration.py  data_preparation.py  experimentation.py  lab_meeting.py  literature_review.py  peer_review.py  plan_formulation.py  protocol.py  registry.py  report_writing.py  reproducibility.py  results_interpretation.py  runner.py  skeleton.py  subgraph.py  transition.py  validator.py
agentlabx/tools/: arxiv_search.py  base.py  code_executor.py  github_search.py  hf_dataset_search.py  latex_compiler.py  semantic_scholar.py  session_artifact_search.py  traced.py
config/: default.yaml
docs/: quickstart.md
tests/: conftest.py  mock_llm_server.py
tests/agents/: test_base_agent.py  test_base_memory.py  test_config_agent.py  test_config_agent_events.py  test_config_agent_real_llm.py  test_config_loader.py  test_context.py  test_pi_advisor.py  test_pi_agent.py  test_pi_agent_events.py  test_pi_agent_real_llm.py
tests/cli/: test_cli.py
tests/core/: test_config.py  test_events.py  test_graph_mapper.py  test_graph_mapper_error.py  test_pipeline.py  test_pipeline_backtrack.py  test_registry.py  test_session.py  test_session_preferences.py  test_state.py  test_turn_context.py  test_zones.py
tests/fakes/: __init__.py  echo_mcp_server.py
tests/harness/: conftest.py  test_spine.py
tests/integration/: test_admin_onboarding.py  test_admin_user_management.py  test_audit_log.py  test_auth_router.py  test_backtrack_governance_e2e.py  test_backtrack_limit_escalation.py  test_credential_isolation.py  test_db_migrations.py  test_lan_requires_tls.py  test_llm_mock_server.py  test_llm_real_provider.py  test_llm_router.py  test_mock_llm_event_stream.py  test_negative_result_escalation.py  test_pipeline_e2e.py  test_plan7a_backtrack_governance.py  test_plan7b_subgraph_end_to_end.py  test_plan7c_negative_result.py  test_plan7c_pi_escalation.py  test_session_management.py  test_stage_subgraph_e2e.py  test_token_auth.py
tests/providers/: test_base_providers.py  test_builtin_code_agent.py  test_litellm_provider.py  test_llm_event_payload_enrichment.py  test_mock_provider.py  test_sqlite_backend.py  test_subprocess_backend.py
tests/server/: test_app.py  test_artifacts_routes.py  test_event_types.py  test_executor.py  test_executor_get_pipeline_state.py  test_observability_endpoints.py  test_pi_advisor_wiring.py  test_plugins_routes.py  test_preferences_routes.py  test_server_e2e.py  test_session_persistence.py  test_sessions_routes.py  test_static.py  test_websocket.py
tests/stages/: test_base_hooks.py  test_base_on_exit_memory_sync.py  test_base_stage.py  test_base_zone.py  test_data_exploration_real.py  test_data_exploration_subgraph.py  test_data_preparation_real.py  test_data_preparation_subgraph.py  test_endpoint_contracts.py  test_experimentation_log.py  test_experimentation_real.py  test_experimentation_subgraph.py  test_harness_capture.py  test_harness_contract_base.py  test_harness_session.py  test_harness_snapshots.py  test_harness_steering.py  test_harness_trace_writer.py  test_helpers.py  test_hitl_contracts_unit.py  test_invocable_only.py  test_lab_meeting.py  test_literature_review_real.py  test_literature_review_subgraph.py  test_peer_review_real.py  test_peer_review_subgraph.py  test_pi_advisor_contracts_unit.py  test_pi_agent_model_plumbing.py  test_pipeline_fail_on_total_failure.py  test_plan_formulation_real.py  test_plan_formulation_subgraph.py  test_report_writing_real.py  test_report_writing_subgraph.py  test_resolve_agent_memory.py  test_resolve_agent_model_plumbing.py  test_results_interpretation_events.py  test_results_interpretation_real.py  test_results_interpretation_subgraph.py  test_runner.py  test_runner_backtrack_cost.py  (+9 more)
tests/storage/: test_agent_turns.py  test_agent_turns_model.py
tests/tools/: test_arxiv_search.py  test_base_tool.py  test_code_executor.py  test_github_search.py  test_hf_dataset_search.py  test_latex_compiler.py  test_semantic_scholar.py  test_session_artifact_search.py  test_traced.py
tests/unit/: test_keyring_store.py  test_passwords.py
web/: .gitignore  .prettierignore  .prettierrc.json  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  globals.css  index.css  main.tsx  router.tsx  theme.ts
web/src/api/: ws.ts  (+3 more)
web/tests/: setup.ts
(+263 files in other folders)
