[project]
name = "agentlabx"
version = "0.1.0"
description = "Modular multi-instance research automation platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "langgraph>=0.4,<1.0",
    "langgraph-checkpoint-sqlite>=2.0,<3.0",
    "litellm>=1.82,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19,<1.0",
    "arxiv>=2.1,<3.0",
    "huggingface-hub>=0.24,<1.0",
    "semanticscholar>=0.10,<1.0",
    "PyGithub>=2.3,<3.0",
    "pypdf>=4.0,<5.0",
    "scikit-learn>=1.4,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "click>=8.1,<9.0",
]

[project.scripts]
agentlabx = "agentlabx.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27,<1.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agentlabx"]
