[project]
name = "agentlabx"
version = "0.1.0"
description = "AgentLabX — LLM-driven research automation platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19,<1.0",
    "cryptography>=42,<44",
    "keyring>=24,<26",
    "argon2-cffi>=23,<24",
    "itsdangerous>=2.2,<3.0",
    "click>=8.1,<9.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "litellm>=1.60,<2.0",
    "mcp>=1.0",
]

[project.scripts]
agentlabx = "agentlabx.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-dotenv>=0.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
]

[project.entry-points."agentlabx.llm_providers"]
litellm = "agentlabx.llm.litellm_provider:LiteLLMProvider"

[project.entry-points."agentlabx.mcp_bundles"]
filesystem = "agentlabx.mcp.bundles.filesystem"
arxiv = "agentlabx.mcp.bundles.arxiv"
semantic_scholar = "agentlabx.mcp.bundles.semantic_scholar"
browser = "agentlabx.mcp.bundles.browser"
code_execution = "agentlabx.mcp.bundles.code_execution"
memory = "agentlabx.mcp.bundles.memory_server"

[project.entry-points."agentlabx.stages"]
literature_review = "agentlabx.stages.echo.stages:EchoLiteratureReviewStage"
plan_formulation = "agentlabx.stages.echo.stages:EchoPlanFormulationStage"
data_exploration = "agentlabx.stages.echo.stages:EchoDataExplorationStage"
data_preparation = "agentlabx.stages.echo.stages:EchoDataPreparationStage"
experimentation = "agentlabx.stages.echo.stages:EchoExperimentationStage"
interpretation = "agentlabx.stages.echo.stages:EchoInterpretationStage"
report_writing = "agentlabx.stages.echo.stages:EchoReportWritingStage"
peer_review = "agentlabx.stages.echo.stages:EchoPeerReviewStage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "SIM",
    "ANN",   # flake8-annotations — every function typed
]
ignore = ["UP017"]  # datetime.UTC not available in all Python 3.12 environments

[tool.ruff.lint.per-file-ignores]
# Explicit: tests are NOT exempt from ANN rules (strict typing memory).
"tests/**/*.py" = ["B008"]  # FastAPI Depends() in default args is the canonical pattern
"agentlabx/server/routers/**/*.py" = ["B008"]  # FastAPI Depends() in default args is the canonical pattern

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_generics = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["keyring.*", "argon2.*", "itsdangerous.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.unit.llm.test_protocol"]
disable_error_code = ["comparison-overlap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env"]
markers = [
    "integration: marks integration tests (use `-m integration` to run only these)",
    "real_llm: marks tests that require a real LLM provider API key",
]

[tool.hatch.build.targets.wheel]
packages = ["agentlabx"]
